# ksanecore

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF5SaneCoreConfig.cmake.in  KSaneCoreConfig.cmake.in  README.md  TODO  metainfo.yaml
autotests/: CMakeLists.txt
cmake-modules/: FindSane.cmake
po/ar/: ksanecore.po
po/bg/: ksanecore.po
po/ca/: ksanecore.po
po/ca@valencia/: ksanecore.po
po/cs/: ksanecore.po
po/de/: ksanecore.po
po/en_GB/: ksanecore.po
po/eo/: ksanecore.po
po/es/: ksanecore.po
po/eu/: ksanecore.po
po/fi/: ksanecore.po
po/fr/: ksanecore.po
po/ga/: ksanecore.po
po/gl/: ksanecore.po
po/he/: ksanecore.po
po/hi/: ksanecore.po
po/hu/: ksanecore.po
po/ia/: ksanecore.po
po/is/: ksanecore.po
po/it/: ksanecore.po
po/ja/: ksanecore.po
po/ka/: ksanecore.po
po/ko/: ksanecore.po
po/lt/: ksanecore.po
po/lv/: ksanecore.po
po/nl/: ksanecore.po
po/nn/: ksanecore.po
po/pl/: ksanecore.po
po/pt/: ksanecore.po
po/pt_BR/: ksanecore.po
po/ro/: ksanecore.po
po/ru/: ksanecore.po
po/sa/: ksanecore.po
po/sk/: ksanecore.po
po/sl/: ksanecore.po
po/sv/: ksanecore.po
po/tr/: ksanecore.po
po/ug/: ksanecore.po
po/uk/: ksanecore.po
po/zh_CN/: ksanecore.po
po/zh_TW/: ksanecore.po
src/: CMakeLists.txt  Messages.sh  authentication.cpp  authentication.h  coreinterface.cpp  coreinterface.h  coreinterface_p.cpp  coreinterface_p.h  coreoption.cpp  coreoption.h  coreoption_p.h  deviceinformation.cpp  deviceinformation.h  deviceinformation_p.h  finddevicesthread.cpp  finddevicesthread.h  imagebuilder.cpp  imagebuilder.h  interface.cpp  interface.h  interface_p.cpp  interface_p.h  internaloption.cpp  internaloption.h  ksaneauth.cpp  ksaneauth.h  ksanecore.cpp  ksanecore.h  ksanecore_p.cpp  ksanecore_p.h  ksanefinddevicesthread.cpp  ksanefinddevicesthread.h  ksaneimagebuilder.cpp  ksaneimagebuilder.h  ksaneinternaloption.cpp  ksaneinternaloption.h  ksaneoption.cpp  ksaneoption.h  ksaneoption_p.h  ksanescanthread.cpp  (+6 more)
src/options/: actionoption.cpp  actionoption.h  baseoption.cpp  baseoption.h  batchdelayoption.cpp  batchdelayoption.h  batchmodeoption.cpp  batchmodeoption.h  booloption.cpp  booloption.h  doubleoption.cpp  doubleoption.h  gammaoption.cpp  gammaoption.h  integeroption.cpp  integeroption.h  invertoption.cpp  invertoption.h  ksaneactionoption.cpp  ksaneactionoption.h  ksanebaseoption.cpp  ksanebaseoption.h  ksanebatchdelayoption.cpp  ksanebatchdelayoption.h  ksanebatchmodeoption.cpp  ksanebatchmodeoption.h  ksanebooloption.cpp  ksanebooloption.h  ksanedoubleoption.cpp  ksanedoubleoption.h  ksanegammaoption.cpp  ksanegammaoption.h  ksaneintegeroption.cpp  ksaneintegeroption.h  ksaneinvertoption.cpp  ksaneinvertoption.h  ksanelistoption.cpp  ksanelistoption.h  ksanepagesizeoption.cpp  ksanepagesizeoption.h  (+8 more)
